--- a/bizOne/src/main/res/layout/biz_one_activiy.xml
+++ b/bizOne/src/main/res/layout/biz_one_activiy.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BizOneActivity">
+    tools:context=".ui.activity.BizOneActivity">
 
     <TextView
         android:id="@+id/bizOneHelloWorld"
