--- a/bizOne/src/main/res/layout/biz_one_activiy.xml
+++ b/bizOne/src/main/res/layout/biz_one_activiy.xml
@@ -26,4 +26,22 @@
         app:layout_constraintRight_toRightOf="parent"
         />
 
+    <com.kyleduo.switchbutton.SwitchButton
+        android:id="@+id/switchButton"
+        android:layout_width="50dp"
+        android:layout_height="26dp"
+        app:layout_constraintTop_toBottomOf="@id/bizOneButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/SwitchButtonStyleMDOff"
+        app:kswTintColor="#49416E"
+        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/bizOneRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bizOneHelloWorld"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
