--- a/bizOne/src/main/res/values/colors.xml
+++ b/bizOne/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
 <!--    <color name="teal_700">#FF018786</color>-->
 <!--    <color name="black">#FF000000</color>-->
 <!--    <color name="white">#FFFFFFFF</color>-->
+    <color name="switch_button_off_color">#DDE1E8</color>
+    <color name="switch_button_on_color">#FFE2DA</color>
 </resources>
