--- a/bizOne/src/main/res/layout/biz_one_adapter_item_view.xml
+++ b/bizOne/src/main/res/layout/biz_one_adapter_item_view.xml
@@ -5,13 +5,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/userName"
-        android:layout_width="match_parent"
+        android:id="@+id/bizOneUserName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="name"
         android:textSize="20dp"
+        app:layout_constraintLeft_toRightOf="@id/bizOneAvator"
+        android:layout_marginLeft="10dp"
+        />
+
+    <ImageView
+        android:id="@+id/bizOneAvator"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/bizOneUserName"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
