--- a/bizOne/src/main/res/layout/biz_one_activiy.xml
+++ b/bizOne/src/main/res/layout/biz_one_activiy.xml
@@ -20,8 +20,28 @@
         android:id="@+id/bizOneButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="bizOne"
+        android:text="accessNet"
         app:layout_constraintTop_toBottomOf="@id/bizOneHelloWorld"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <Button
+        android:id="@+id/showNoNetAccessDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="showNoNetAccessDialog"
+        app:layout_constraintTop_toBottomOf="@id/switchButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <Button
+        android:id="@+id/showNetAccessDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="showNetAccessDialog"
+        app:layout_constraintTop_toBottomOf="@id/showNoNetAccessDialog"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
