--- a/bizOne/src/main/res/layout/biz_one_activiy.xml
+++ b/bizOne/src/main/res/layout/biz_one_activiy.xml
@@ -54,6 +54,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
+    <Button
+        android:id="@+id/faceDetectionTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="faceDetectionTest"
+        app:layout_constraintTop_toBottomOf="@id/showWebViewActivity"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
     <com.kyleduo.switchbutton.SwitchButton
         android:id="@+id/switchButton"
