--- a/bizOne/src/main/res/layout/face_detection_activity_layout.xml
+++ b/bizOne/src/main/res/layout/face_detection_activity_layout.xml
@@ -18,12 +18,23 @@
         />
 
     <ImageView
-        android:layout_width="240dp"
-        android:layout_height="320dp"
+        android:layout_width="320dp"
+        android:layout_height="340dp"
         android:id="@+id/faceRect"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
+
+    <Button
+        android:id="@+id/cameraController"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开关"
+        app:layout_constraintTop_toBottomOf="@id/previewView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
